src/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    border: none;
    outline: none;
    scroll-behavior: smooth;
    font-family: 'Poppins', sans-serif;
}

:root {
    --bg-color: #1f242d;
    --second-color: #323946;
    --text-color: #fff;
    --main-color: #0ef;
}

html {
    font-size: 62.5%;
    overflow-x: hidden;
}

body{
    background: var(--bg-color);
    color: var(--text-color);
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 2rem 9%;
    background: var(--bg-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 99;
}

.navbar {
    width: 100%;
    height: 63px;
    margin: 0 96px 0 0;
    font-size: 1.6rem;
    color: var(--text-color);
}
.nav-link {
    width: 376px; 
    height: 14px; 
    left: 65%; 
    top: 19px; 
    position: absolute;
    display: flex;
}
.navbar a {
    cursor: pointer;
    font-weight: 500;
  }

.nav-menu {
    color: var(--text-color);
    padding-right: 34px;
    text-transform: uppercase;
    font-size: 1.4rem;
}

.nav-menu:last-child {
    padding-right: 0;
}

.logo {
    width: 12vw;
    height: 4.2vh;
    font-size: 2.5rem;
    color: var(--text-color);
    font-weight: 600;
    cursor: default;
}
.logo-image {
    width: 30px; 
    height: 30px; 
    position: absolute;
}
.logo-title {
    margin-top: 2px; 
    margin-left: 37px; 
    position: absolute; 
    font-size: 1.5rem;
}
.container {
    width: 100vw;
    height: calc(60vh + 23px);
    margin-top: 7rem;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    align-items: center;
    z-index: 1000;
  }

.profile-pic {
    width: 300px;
    height: 300px;
    margin: auto;
}
.background-image {
    position: absolute;
    top: calc(50% - 150px);
    left: calc(50% - 150px);
    width: 300px;
    height: 300px;
    border-radius: 50%;
    box-shadow:
      inset 0 0 50px #fff,      /* inner white */
      inset 20px 0 80px #f0f,   /* inner left magenta short */
      inset -20px 0 80px #0ff,  /* inner right cyan short */
      inset 20px 0 300px #f0f,  /* inner left magenta broad */
      inset -20px 0 300px #0ff, /* inner right cyan broad */
      0 0 50px #fff,            /* outer white */
      -10px 0 80px #f0f,        /* outer left magenta */
      10px 0 80px #0ff;         /* outer right cyan */
}
.divider {
    padding: 6rem;
}
.intro-greeting {
    display: inline-block;
    font-size: 5rem;
    margin-top: 60vh;
}

.intro-name {
    font-size: 5rem;
    font-weight: bold;
    color: var(--main-color);
}
.typewrite-wrap { 
    border-right: 0.08em solid #fff;
    color: var(--text-color);
    font-size: 4rem;
}
.heading{
    font-size: 1.5rem;
    margin-top: 50%;
}
.box {
    display: flex;
    width: 1084px;
    height: 300px;
    margin: 0 auto;
    align-items: center;
    justify-content: space-between;
    flex-shrink: 0;
    box-sizing: border-box;
}
.box-container {
    height: auto; 
    flex-shrink: 0;
    flex: 1;
}

.box-container:first-child {
    width: 680px; 
    height: 211px; 
    margin-right: 40px;
    padding-right: 28rem;
}

.box-container:last-child {
    width: 350px; 
    height: 184px; 
}
.stack-title{
    padding: 0 0 20px 0;
}

.stack-icons {
    width: 100%;
    height: auto;
    margin-top: 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    
}
.stack-icons div {
    width: calc(33.33% - 10px);
    height: calc(33.33% - 10px);
    background-color: #121212;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 25px 20px 20px 20px;
    margin-bottom: 20px;
}
  
.stack-icons svg {
    width: 60px;
    height: 60px;    
}
  
.about-title{
    padding: 0 0 20px 0;
}

.about-text{
    width: 650px; 
    text-align: justify; 
    padding: 0 0 20px 0;
}
.github-container {
    width: 100vw;
    height: 100vh;
    position: absolute;
    display: block;
    justify-content: center;
    text-align: center;
    align-items: center;
  }

.section-title {
    padding: 0 0 20px 0;
}

.table-title{
    margin-top: 40vh;
    font-size: 2rem;
}

table {
    border-collapse: separate;
    border-spacing: 2px;
    width: 72%;
    margin-top: 2rem;
    margin-left: 13vw;
    color: #fff;
    
}

td {
    height: 10px;
    border: 1px solid #9ca6b8;
    border-radius: 2px;
    padding: 5px;
}

.color-0 { background-color: #323946; }
.color-1 { background-color: #9be9a8; }
.color-2 { background-color: #40c463; }
.color-3 { background-color: #30a14e; }
.color-4 { background-color: #216e39; }

.card-group {
    margin-top: 35%;
    margin-left: 13vw;
}
.card-group-title{
    font-size: 2.5rem;
    font-weight: bold;
    margin-bottom: -60px;
}
.card-deck {
    width: 70vw;
    height: 150vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}
.card {
    width: calc(33.33% - 10px);
    height: calc(33.33% - 10px);
    background-color: #121212;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

.card-title{
    font-size: 2rem;
    margin-top: 2.4rem;
}
.card-body {
    flexbox: flex;
}
.card-text {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    font-size: 1.5em;
  }
  
.card-img-top {
    width: 200px;
    height: 200px;
}
.card-footer {
    margin-top: 10px;
}
.card-tag{
    box-sizing: border-box;
    border-radius: 3px;
    padding: 0 8px;
    margin: 0 5px;
    background-color: #00ff40;
    color: var(--second-color);
    font-size: 1.5em;
}
.card-link{
    padding: 5px 0;
    font-size: 1.8em;
    color: var(--text-color);    
}
section {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0 auto;
  padding: 20px;
  position: relative;
  max-width: 840px;
}
.contact-title {
    align-items: center;
    justify-content: center;
    text-align: center;
    font-size: 4em;
    padding: 30px 0;
   
}

form { 
    max-width:420px; 
    margin:50px auto; 
}

.contact-form {
  font-weight:500;
  font-size: 18px;
  border-radius: 5px;
  line-height: 22px;
  background-color: transparent;
  border:2px solid #0ef;
  transition: all 0.3s;
  padding: 13px;
  margin-bottom: 15px;
  width:100%;
  box-sizing: border-box;
  outline:0;
}

.contact-form:focus { border:2px solid #069d8a; }

textarea {
  height: 150px;
  line-height: 150%;
  resize:vertical;
}

[type="submit"] {
  width: 100%;
  background:#009ba8;
  border-radius:5px;
  border:0;
  cursor:pointer;
  color: var(--text-primary);
  font-size:16px;
  padding-top:10px;
  padding-bottom:10px;
  transition: all 0.3s;
  margin-top:-4px;
  font-weight:700;
}
[type="submit"]:hover { 
    background:#73c8fb; 
}
.social-media {
    max-width: 400px;
}
.social-icons {
    list-style: none;
    padding: 60px 20px;
    margin: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  .social-icons li {
    margin: 0 10px;
  }
  
  .social-icons a {
    color: #ffffff;
    font-size: 30px;
  }

  footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 9999; 
}

.footer-content {
    padding: 5px;
    text-align: center;
    font-size: 14px;
}

/*TODO: Ajustar responsividade*/
/* Tela menor que 600px*/
@media only screen and (max-width: 600px) {
    .profile-pic .background-image {
        width: calc(100% - 150px);
        height: calc(100% - 150px);
    }

    .profile-pic {
        margin: auto;
    }
    .intro-greeting {
        margin-top: 85vh;
        font-size: 4rem;
    }
        .intro-name {
        font-size: 4rem;
    }
        .typewrite-wrap { 
        font-size: 3rem;
    }
}

/*TODO: Ajustar responsividade*/
@media only screen and (min-width: 768px) and (max-width: 959px) {
    .profile-pic .background-image {
        width: calc(100% - 150px);
        height: calc(100% - 150px);
    }

    .profile-pic {
        margin: auto;
    }
    .intro-greeting {
        margin-top: 90vh;
        font-size: 4rem;
    }
        .intro-name {
        font-size: 4rem;
    }
        .typewrite-wrap { 
        font-size: 3rem;
    }
}
    

